# graph-rag-demo

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml
docs/: ANSWERS.md  ARCHITECTURE.md  BREADBOARD.md  CONTEXT.md  FRAME.md  PRD.md  QUESTIONS.md  REQS.md  SHAPING.md  SLICES.md  SPECS-BACKLOG.md  TESTING.md  WORKFLOW-PAINPOINTS.md
docs/adr/: 0001-single-inprocess-modular-pipeline.md  0002-local-ner-with-spacy.md  0003-within-document-coreference.md  0004-corpus-local-entity-linking.md  0005-elasticsearch-index-split.md  0006-knowledge-graph-builder-and-model.md  0007-graph-rag-query-retrieval.md  0008-llm-abstraction-caching-structured-output.md  0009-benchmarking-strategy.md  0010-external-dependency-port-boundary.md
examples/supply-chain/: 01-aurelia-components.md  02-german-supply-chain-act.md  03-manufacturing-in-berlin.md  README.md
graph_rag/: __init__.py  api.py  config.py  demo.py  fakes.py  ids.py  logging.py  main.py  models.py  normalize.py  orchestrator.py  ports.py  predicates.py
graph_rag/adapters/: __init__.py  embedder.py  es_document_store.py  es_entity_store.py  llm_client.py  minio_object_store.py  neo4j_graph_store.py
graph_rag/benchmark/: __init__.py  __main__.py  cli.py  dataset.py  harness.py  metrics.py  pipeline.py
graph_rag/messaging/: __init__.py  kafka_trigger.py
graph_rag/query/: __init__.py  ranking.py  retriever.py  synthesis.py
graph_rag/stages/: __init__.py  coref.py  entity_linking.py  kg_build.py  ner.py
scripts/: check_landing_page.py  pre-push
site/: index.html
tests/: conftest.py
tests/contract/: test_document_store_contract.py  test_entity_store_contract.py  test_graph_store_contract.py  test_kafka_contract.py  test_object_store_contract.py
tests/e2e/: test_benchmark.py  test_coref.py  test_entity_linking.py  test_ingest_api.py  test_kg_build.py  test_process_document.py  test_query.py  test_synthesis.py
tests/fixtures/: wiki2_mini.json
tests/integration/: test_benchmark_real_stack.py
tests/llm/: test_real_provider.py
tests/model/: test_embedder.py  test_spacy_ner.py
tests/unit/: test_document_id.py  test_document_search.py  test_el_merge.py  test_entity_fakes.py  test_graph_fake.py  test_kg_build.py  test_llm_cache.py  test_metrics.py  test_ner_mapping.py  test_orchestrator_nodes.py  test_predicates.py  test_ranking.py  test_retriever.py  test_synthesis.py
