[project]
name = "graph-rag-demo"
version = "0.1.0"
description = "Locally-run Docker Compose Graph RAG pipeline (ingest -> stored document walking skeleton and beyond)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "minio",
    "elasticsearch>=8,<9",
    "kafka-python",
    "pydantic>=2",
    "pydantic-settings",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "testcontainers[minio,elasticsearch,kafka]",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["graph_rag"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "contract: real-service tests via testcontainers (excluded from the fast suite)",
    "e2e: end-to-end tests driving an entry point through the port seam",
]
