[project]
name = "graph-rag-demo"
version = "0.1.0"
description = "Locally-run Docker Compose Graph RAG pipeline (ingest -> stored document walking skeleton and beyond)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "minio",
    "elasticsearch>=9.4.1,<10",
    "kafka-python",
    "pydantic>=2",
    "pydantic-settings",
    # NER stage (V2, ADR-0002). spaCy itself is light; the transformer model and
    # its runtime (spacy-transformers + torch) are HEAVY and live in the `trf`
    # extra so the base install + fast CI/pre-push stay light. Models are fetched
    # separately (`make models` / `make models-trf`), never installed as deps.
    "spacy>=3.7,<4",
    # LLM client (V3, ADR-0008). Provider-agnostic via LiteLLM: coref (and later
    # KG-build) call the LLM through it; the provider/model is a per-stage config
    # choice. LiteLLM is imported lazily by the adapter so the fakes-only fast
    # suite never imports it and stays offline.
    "litellm",
    # GraphStore (V5, ADR-0006). The official Neo4j driver is light + pure-Python
    # (no torch), so it lives in the base deps. The fast suite uses the in-memory
    # fake, so this import stays offline and never connects at import time — the
    # driver opens a connection only on first query.
    "neo4j>=6.2.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "testcontainers[minio,elasticsearch,kafka,neo4j]",
    "ruff",
]
# Transformer NER runtime (ADR-0002). Only the real stack / a trf-backed run
# needs these; the fast suite uses `en_core_web_sm` under plain spaCy.
trf = [
    "spacy-transformers",
    "torch",
]
# Local embedder runtime (V4, ADR-0004, B1). `sentence-transformers` pulls torch,
# so it lives in this OPTIONAL extra — kept OUT of the base install so the fast
# CI / pre-push gate stays light (fakes-only, no torch). The real stack + the
# `model`-marked embedder test install `.[embed]`; the bge model is fetched
# separately (`make embed-model`), never installed as a dep.
embed = [
    "sentence-transformers",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["graph_rag"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "contract: real-service tests via testcontainers (excluded from the fast suite)",
    "e2e: end-to-end tests driving an entry point through the port seam",
    "model: tests that load a real spaCy model or embedder (needs `make models` / `.[embed]`; excluded from the fast pre-push gate)",
    "llm: opt-in tests that call a real LLM provider (needs an API key; skipped without one; excluded from the fast pre-push gate)",
]
